# Skyrocket

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  launchpad.json
CMake/: skyrocket.cmake
Docs/: Doxyfile  Memory.h
Examples/: CMakeLists.txt
Examples/Common/: CMakeLists.txt  Common.cpp  Common.hpp
Source/: CMakeLists.txt
Source/Skyrocket/Core/: CMakeLists.txt  Config.hpp  Hash.cpp  Hash.hpp  Math.hpp  Memory.cpp  Memory.hpp
Source/Skyrocket/Core/Containers/: Bitset.hpp  Buffer.hpp  ConditionalTypes.hpp  HandleTable.hpp  IDLookup.hpp  MPSCQueue.hpp
Source/Skyrocket/Core/Diagnostics/: Error.cpp  Error.hpp  ErrorMessage.hpp  FPSCounter.hpp  SkyAssert.hpp  SkyTime.hpp  Stopwatch.hpp  Timespan.hpp  Timespan.inl
Source/Skyrocket/Core/Diagnostics/Internal/: Error.cpp  ErrorMessage.cpp  FPSCounter.cpp  SkyAssert.cpp  SkyTime.inl  Stopwatch.cpp  Timespan.cpp  Timespan.inl
Source/Skyrocket/Core/Geometry/: Rectangle.hpp
Source/Skyrocket/Core/Math/: Common.hpp  Math.cpp  Matrix4.hpp  Trigonometry.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
Source/Skyrocket/Core/Memory/: Allocator.hpp  Memory.cpp  Memory.hpp  Noncopyable.hpp  PoolAllocator.hpp  StackAllocator.hpp
Source/Skyrocket/Framework/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Viewport.cpp  Viewport.hpp
Source/Skyrocket/Graphics/: CMakeLists.txt  Color.cpp  Color.hpp  Frame.cpp  Frame.hpp  FrameInfo.cpp  GraphicsDriver.cpp  GraphicsDriver.hpp  ImGUI.hpp  Image.cpp  Image.hpp  Renderer.cpp  Renderer.hpp  TextBuffer.hpp  Texture.hpp  Vertex.hpp  Viewport.cpp  Viewport.hpp
Source/Skyrocket/Graphics/API/: CMakeLists.txt
Source/Skyrocket/Graphics/API/Metal/: CMakeLists.txt  MetalDriver.h  MetalDriver.mm
Source/Skyrocket/Graphics/Apple/: CMakeLists.txt  CocoaView.h  CocoaView.mm  MacViewport.h  MacViewport.mm  MetalView.mm
Source/Skyrocket/Graphics/Core/: CMakeLists.txt  GraphicsData.hpp  GraphicsDriver.cpp  GraphicsDriver.hpp  Image.cpp  Vertex.hpp
Source/Skyrocket/Graphics/GDI/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  CommandData.hpp  CommandList.cpp  CommandList.hpp  CommandQueue.cpp  CommandQueue.hpp  Commands.hpp  Definitions.cpp  Definitions.hpp  GDI.cpp  GDI.hpp  GDI.inl  RenderResource.cpp  RenderResource.hpp
Source/Skyrocket/Graphics/GDI/Experimental/: CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  GDI.hpp  GDI_EX.cpp  GDI_EX.hpp  GraphicsDriver.cpp  GraphicsDriver.hpp
Source/Skyrocket/Graphics/GDI/Experimental/Metal/: MetalGDI.h  MetalGDI.mm
Source/Skyrocket/Graphics/GDI/Internal/: CMakeLists.txt  GDI.cpp  GDI.inl
Source/Skyrocket/Graphics/GDI/Metal/: CMakeLists.txt  MetalDriver.h  MetalDriver.mm  MetalGDI.h  MetalGDI.mm  MetalResource.h  MetalResource.mm
Source/Skyrocket/Graphics/GraphicsCore/: GraphicsDriver.cpp  GraphicsDriver.hpp  Vertex.hpp
Source/Skyrocket/Graphics/GraphicsInterface/: CMakeLists.txt  RenderResource.cpp  RenderResource.hpp
Source/Skyrocket/Graphics/Interface/: CMakeLists.txt  RenderResource.cpp  RenderResource.hpp
Source/Skyrocket/Graphics/Interface/Apple/: CMakeLists.txt  MacViewport.mm
Source/Skyrocket/Graphics/Interface/Apple/Metal/: CMakeLists.txt  MetalDriver.h  MetalDriver.mm  MetalView.h  MetalView.mm
Source/Skyrocket/Graphics/Interface/Windows/: CMakeLists.txt  WindowsViewport.cpp
Source/Skyrocket/Graphics/Internal/: CMakeLists.txt  Font.cpp  GraphicsDriver.cpp  Renderer.cpp  Viewport.cpp
Source/Skyrocket/Graphics/Internal/Apple/: CMakeLists.txt  MacViewport.mm  MetalView.h  MetalView.mm
Source/Skyrocket/Graphics/Internal/Windows/: WindowsViewport.cpp
Source/Skyrocket/Graphics/Renderer/: CMakeLists.txt  CommandData.hpp  CommandList.cpp  CommandList.hpp  Definitions.cpp  Definitions.hpp  FrameInfo.cpp  FrameInfo.hpp  GDI.cpp  GDI.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp
Source/Skyrocket/Graphics/Renderer/Metal/: CMakeLists.txt  MetalGDI.h  MetalGDI.mm  MetalResource.h  MetalResource.mm  MetalView.h  MetalView.mm
Source/Skyrocket/Graphics/Renderer/OpenGL/: CMakeLists.txt  GLConfig.hpp  GLContext.hpp  GLGDI.cpp  GLGDI.hpp  GLResource.cpp  GLResource.hpp  GLResource.inl  NSGLContext.mm  NSGLView.h  NSGLView.mm
Source/Skyrocket/Graphics/Windows/: WindowsViewport.cpp
Source/Skyrocket/Platform/: CMakeLists.txt  Config.hpp  Filesystem.cpp  Filesystem.hpp  NativeInput.hpp  Platform.cpp  Platform.hpp  PlatformEvents.cpp  PlatformEvents.hpp  Thread.cpp  Thread.hpp  Time.hpp
Source/Skyrocket/Platform/Common/: CMakeLists.txt  NativeInput.cpp  Platform.cpp
Source/Skyrocket/Platform/Cross/: ChronoTime.cpp  Time.hpp
Source/Skyrocket/Platform/Default/: ChronoTime.cpp
Source/Skyrocket/Platform/Generic/: CMakeLists.txt  GenericPlatform.cpp
Source/Skyrocket/Platform/Internal/: CMakeLists.txt  Filesystem.cpp  Platform.cpp  PlatformEvents.cpp  PlatformEvents.hpp  Thread.cpp  Time.cpp
Source/Skyrocket/Platform/Shared/: CMakeLists.txt  Platform.cpp
Source/Skyrocket/Platform/StdPlatform/: CMakeLists.txt  StdPlatform.cpp
Source/Skyrocket/Platform/Windows/: CMakeLists.txt  WindowsApplication.cpp  WindowsApplication.hpp  WindowsInput.cpp  WindowsPlatform.cpp
Source/Skyrocket/Platform/macOS/: CMakeLists.txt  CocoaApplication.h  CocoaView.h  CocoaView.mm  CocoaWindow.h  CocoaWindow.mm  MacApplication.h  MacApplication.mm  MacEvents.mm  MacFilesystem.mm  MacInput.mm  MacPlatform.h  MacPlatform.mm  MetalView.mm  Platform.mm  macOS.h
Source/Skyrocket/Resource/: CMakeLists.txt  Font.cpp  Font.hpp  Image.cpp  Image.hpp
Tests/Static/: CMakeLists.txt  TestMain.cpp  catch.hpp
Tests/Static/Core/: BitsetTest.cpp  CMakeLists.txt
Tests/Static/Graphics/: CMakeLists.txt  DefinitionsTest.cpp
Tests/Static/Hash/: CMakeLists.txt  Murmur3Tests.cpp
Tests/Static/Math/: CMakeLists.txt  MBEMatrixUtilities.cpp  MBEMatrixUtilities.h  MetalMatrixTests.cpp  OpenGLMatrixTests.cpp
Tests/Static/Memory/: Align.cpp  Allocator.cpp  CMakeLists.txt
Tests/Static/Platform/: CMakeLists.txt  PathTests.cpp
Tests/Static/Time/: CMakeLists.txt  Stopwatch.cpp
Tests/Static/catch/: catch.hpp
(+80 files in other folders)
